# magic-wormhole-tauri

./: .tsconfig.json.swp  README.md  config.js  package.json  tsconfig.json
.github/workflows/: artifacts.yml  main.yml
frontend/: App.tsx  client.tsx  index.tsx  remote.tsx  tauri.tsx  types.tsx  webrtc.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  crypto.rs  dana.rs  errors.rs  main.rs
