[package]
name = "dana"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "dana"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
clipboard = "0.5.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "event" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "dana"
path = "src/main.rs"
