[package]
name = "dana"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "dana"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
clipboard = "0.5.0"
hex = "0.4.3"
log = "0.4.13"
anyhow = "1.0"
magic-wormhole = { git = "https://github.com/magic-wormhole/magic-wormhole.rs" }
async-std = { version = "1.9.0", features = [ "attributes" ] }
async-tungstenite = { version = "0.13.1", features = [ "async-std-runtime" ] }
futures = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "event" ] }
snow = "0.7.2"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "dana"
path = "src/main.rs"
